Some tidying up

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,4 +10,4 @@ services:
       - /etc/revpi/config.rsc:/config.rsc
     network_mode: host
     environment:
-      - PYTHONDEBUG=DEBUG
+      - LOGLEVEL=DEBUG
